# gradientnbv

./: .gitignore  README.md  install_conda_pkgs.yaml  install_ros_pkgs.sh
src/common/utils/: CMakeLists.txt  package.xml  setup.py
src/common/utils/srv/: GetTransform.srv
src/robot/abb_control/: CMakeLists.txt  package.xml  setup.py
src/robot/abb_l515_bringup/: CMakeLists.txt  package.xml
src/robot/abb_l515_description/: CMakeLists.txt  package.xml
src/robot/abb_l515_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot/abb_l515_moveit_config/config/: abb_l515.srdf  chomp_planning.yaml  gazebo_abb_l515.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
src/robot/abb_l515_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/simulation_environment/: CMakeLists.txt  package.xml
src/simulation_environment/launch/: simulation_environment.launch
src/simulation_environment/sdfs/: box.sdf
src/simulation_environment/worlds/: bunny.world  empty_scene.world
src/viewpoint_planning/: CMakeLists.txt  package.xml  setup.py
src/viewpoint_planning/config/: moveit.rviz
(+37 files in other folders)
